# StudyVerify

./: .dockerignore  .env.docker.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02dbc0b244cb_add_hint_sessions_table.py  0b3015bfb3f1_create_solver_sessions_table.py  a91b4f2c7e08_add_solver_sessions_topics.py  b1703d20c94b_add_entry_function_to_solver_sessions.py  d3bd309a15f6_add_retry_metrics_to_solver_sessions.py  de9421cbca21_add_verifier_failure_embedding.py  f3541344b480_add_verifier_sessions_table.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  models.py  session.py
backend/app/llm/: __init__.py  client.py  embedding.py  exceptions.py  gateway.py  sanitize.py
backend/app/repositories/: __init__.py  hint_repository.py  solver_repository.py  verifier_repository.py
backend/app/sandbox/: __init__.py  base_runner.py  docker_runner.py  exceptions.py  runner.py  schemas.py
backend/app/schemas/: hint_session.py  solver_session.py  verifier_session.py
backend/app/scripts/: backfill_embeddings.py  generate_buggy_variants.py  seed_failure_corpus.py
backend/app/services/: __init__.py  hint_service.py  retrieval_service.py  solver_service.py  test_case_generator.py  verifier_service.py
backend/benchmark/: _compare_step10_step11.py  _diagnose_verifier.py  _generate_via_api.py  _generate_via_api_p3.py  _make_report.py  _targeted_ids.txt  aggregate.py  anti_leak_judge.py  api_client.py  eval_pipeline.py  helpful_judge.py  problems_part_1.json  problems_part_2.json  problems_part_3.json  run_eval.py  schema.py  validators.py
backend/tests/: conftest.py  test_health.py
(+101 files in other folders)
