[project]
name = "studyverify-backend"
version = "0.1.0"
description = "StudyVerify backend — verification-driven AI learning companion."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.46.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
